Added SSL capability

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 PORT=3001
 STEAM_KEY=XXXXXX
 DEVELOPMENT=true
+SSL_ENABLED=false
+SSL_PRIVATE_KEY_PATH=/etc/letsencrypt/live/example.com/privkey.pem
+SSL_CERT_PATH=/etc/letsencrypt/live/example.com/fullchain.pem
+SSL_CERT_AUTH_PATH=/etc/letsencrypt/live/example.com/chain.pem
