Fixed CORS handling

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT=3001
+FRONTEND_URL=http://localhost:3000
 STEAM_KEY=XXXXXX
-DEVELOPMENT=true
 SSL_ENABLED=false
 SSL_PRIVATE_KEY_PATH=/etc/letsencrypt/live/example.com/privkey.pem
 SSL_CERT_PATH=/etc/letsencrypt/live/example.com/fullchain.pem
